--- a/back-service/build.gradle
+++ b/back-service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 
+    implementation 'org.json:json:20231013'
+
 }
 
 tasks.named('test') {
