modify & refactor code. also include logic calls/controller to make categories out of input text

--- a/front-service/manifest.json
+++ b/front-service/manifest.json
@@ -25,6 +25,13 @@
       ],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "web_accessible_resources": [{
+    "resources": [
+      "js/*.js"
+    ],
+    "matches": ["<all_urls>"]
+  }]
+
 
 }
