--- a/back-service/src/main/resources/application.properties
+++ b/back-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=back-service
+api.categories-url=http://127.0.0.1:8001/generate-categories
+api.questions-url=http://127.0.0.1:8001/generate-questions
