include logic to extract specific text based on category

--- a/front-service/manifest.json
+++ b/front-service/manifest.json
@@ -28,10 +28,14 @@
   ],
   "web_accessible_resources": [{
     "resources": [
-      "js/*.js"
+      "js/script.js",
+      "js/uiManager.js",
+      "js/quizManager.js",
+      "js/categoryManager.js",
+      "js/apiService.js",
+      "libs/*"
     ],
     "matches": ["<all_urls>"]
   }]
-
 
 }
