update & fix bug regarding url rediraction - extraction of content

--- a/front-service/manifest.json
+++ b/front-service/manifest.json
@@ -16,14 +16,18 @@
   "host_permissions": [
     "<all_urls>"
   ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": [
         "libs/Readability.js",
-        "content.js"
+        "content-script.js"
       ],
-      "run_at": "document_idle"
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [{
