--- a/back-service/build.gradle
+++ b/back-service/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 
     implementation 'org.json:json:20231013'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
 }
 
 tasks.named('test') {
